<resources>
    <string name="app_name">Companion</string>
    <string name="login">Enter Academia Details</string>
    <string name="dayorder1">Day Order 1</string>
    <string name="dayorder2">Day Order 2</string>
    <string name="dayorder3">Day Order 3</string>
    <string name="dayorder4">Day Order 4</string>
    <string name="dayorder5">Day Order 5</string>
    <string name="announcement">Announcements</string>
    <string name="events">Events</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="whatsnew">What\'s New</string>
    <string name="timetable">Your Timetable</string>
    <string name="share">Share</string>
    <string name="select">Select Day Order    </string>
    <string name="enter_details">Edit Details</string>
    <string name="dy1">Hour 1</string>
    <string name="dy2">Hour 2</string>
    <string name="dy3">Hour 3</string>
    <string name="dy4">Hour 4</string>
    <string name="dy5">Hour 5</string>
    <string name="dy6">Hour 6</string>
    <string name="dy7">Hour 7</string>
    <string name="dy8">Hour 8</string>
    <string name="dy9">Hour 9</string>
    <string name="dy10">Hour 10</string>
    <string name="enter_course">Course Name</string>
    <string name="enter_class">Room</string>
    <string name="version">v3.1</string>
    <string name="save">Save</string>
    <string name="academia">Academia</string>
    <string name="support">Support Dev</string>
    <string name="update">Updates will fix bugs.</string>
    <string name="time"> </string>
    <string name="editing">Save when finished Adding/Editing</string>
    <string name="select_year">Select Year</string>
    <string name="srm_weebly">SRM Weebly</string>
    <string name="estudy">Study</string>
    <string name="lt_androdev"><![CDATA[<androdev/>]]></string>
    <string name="androdev700_gmail_com">androdev700@gmail.com</string>
    <string name="for_suggestions_amp_bugs"><![CDATA[For Suggestions & Bugs]]></string>
    <string name="developed_by">Developed By</string>
    <string name="ishuchita">iShuchita</string>
    <string name="help_amp_support"><![CDATA[Help & Support]]></string>
    <string name="enjoy_weekend">Enjoy The Weekend</string>
    <string name="good_night">Have a Good Night!</string>
    <string name="good_morning">Good Morning</string>
    <string name="how_was_today">How was your day today?</string>
    <string name="hi">Hi There!</string>
    <string-array name="days">
        <item>Day Order 1</item>
        <item>Day Order 2</item>
        <item>Day Order 3</item>
        <item>Day Order 4</item>
        <item>Day Order 5</item>
    </string-array>
    <string-array name="year">
        <item>1st Year</item>
        <item>2nd Year</item>
        <item>3rd Year</item>
        <item>4th Year</item>
    </string-array>
    <string-array name="choice_year">
        <item>2nd Year</item>
        <item>3rd Year</item>
        <item>4th Year</item>
    </string-array>
    <string-array name="choice_weebly">
        <item>ODD Semester 2015–16</item>
        <item>EVEN Semester 2015–16</item>
        <item>ODD Semester 2016–17</item>
        <item>EVEN Semester 2016–17</item>
        <item>ODD Semester 2017–18</item>
    </string-array>
    <string-array name="help_support">
        <item>Indefinite Loading.</item>
        <item>To know the timings, touch on the respective hour.</item>
        <item>Edits not getting saved?</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hour_1">Hour 1 :</string>
    <string name="n_a">N/A</string>
    <string name="hour_2">Hour 2 :</string>
    <string name="hour_3">Hour 3 :</string>
    <string name="hour_4">Hour 4 :</string>
    <string name="hour_5">Hour 5 :</string>
    <string name="hour_6">Hour 6 :</string>
    <string name="hour_7">Hour 7 :</string>
    <string name="hour_8">Hour 8 :</string>
    <string name="hour_9">Hour 9 :</string>
    <string name="hour_10">Hour 10 :</string>
    <string name="class_room">Class Room :</string>
    <string name="your_time_table">Your Timetable</string>
    <string name="help0">Check your internet connection or try signing out and signing in again.</string>
    <string name="help1">Goto any Day Order and give it a try!</string>
    <string name="help2">Don\'t forget to press save after entering the data.</string>
    <string name="app_link"><![CDATA[https://play.google.com/store/apps/details?id=com.android.chrome&hl=en]]></string>
    <string name="ishucita">http://ishuchita.com/</string>
    <string name="techcheckone">https://twitter.com/androdev700</string>
    <string name="free">Free/Not Set</string>
    <string name="free1">N/A</string>
    <string name="home">Home</string>
    <string name="back_button">Back Button</string>
    <string name="today_is_day">Today is Day Order</string>
    <string name="tomorrow_is_day">Tomorrow will be Day Order</string>
    <string name="today_is">Today is</string>
    <string name="error_fetch">Error Fetching Day Order, check your internet connection.</string>
    <string name="fetching_day">Fetching today\'s day order…</string>
    <string name="sign_out">Sign Out</string>

    <string name="time_hour1">Hour 1 : 08:00 – 08:50</string>
    <string name="time_hour2">Hour 2 : 08:50 – 09:40</string>
    <string name="time_hour3">Hour 3 : 09:45 – 10:35</string>
    <string name="time_hour4">Hour 4 : 10:40 – 11:30</string>
    <string name="time_hour5">Hour 5 : 11:35 – 12:25</string>
    <string name="time_hour6">Hour 6 : 12:30 – 13:20</string>
    <string name="time_hour7">Hour 7 : 13:25 – 14:15</string>
    <string name="time_hour8">Hour 8 : 14:20 – 15:10</string>
    <string name="time_hour9">Hour 9 : 15:15 – 16:05</string>
    <string name="time_hour10">Hour 10 : 16:05 – 16:55</string>
    <string name="twelve_time_hour1">Hour 1 : 8:00am – 8:50am</string>
    <string name="twelve_time_hour2">Hour 2 : 8:50am – 9:40am</string>
    <string name="twelve_time_hour3">Hour 3 : 9:45am – 10:35am</string>
    <string name="twelve_time_hour4">Hour 4 : 10:40am – 11:30am</string>
    <string name="twelve_time_hour5">Hour 5 : 11:35am – 12:25pm</string>
    <string name="twelve_time_hour6">Hour 6 : 12:30pm – 1:20pm</string>
    <string name="twelve_time_hour7">Hour 7 : 1:25pm – 2:15pm</string>
    <string name="twelve_time_hour8">Hour 8 : 2:20pm – 3:10pm</string>
    <string name="twelve_time_hour9">Hour 9 : 3:15pm – 4:05pm</string>
    <string name="twelve_time_hour10">Hour 10 : 4:05pm – 4:55pm</string>
    <string name="edit_slots">Edit Slots</string>
    <string name="slot_selector">Slot Selector</string>
    <string name="batch_selector">Choose your batch</string>
    <string name="hello_text">Hello!\n Take a moment to choose your batch and open academia to fill in your slots and leave the rest to us.</string>
    <string name="batch_menu">Change Batch</string>
    <string name="your_batch">Your Batch</string>
    <string name="report_issue">Report Issue</string>
    <string name="app_url">https://play.google.com/store/apps/details?id=com.androdev.timecompanion</string>
    <string name="account">Account</string>
    <string name="alert_academia">Login in once here, and never log in again.  (Signing into Academia on other device might sign you out of Companion.)</string>
    <string name="share_msg">Check out this app, to ease out your timetable.</string>
    <string name="msg_signin_success">Signed in!, Fetching previous data if it exists!</string>
    <string name="clear_data">Clear Data</string>

</resources>