<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/edit_details"
        android:icon="@drawable/ic_edit"
        android:orderInCategory="1"
        android:title="@string/enter_details"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/edit_slot"
        android:orderInCategory="2"
        android:title="@string/edit_slots"
        app:showAsAction="never" />

    <item
        android:id="@+id/account"
        android:orderInCategory="3"
        android:title="@string/account"
        app:showAsAction="never" />

    <item
        android:id="@+id/sign_out"
        android:orderInCategory="4"
        android:title="@string/sign_out"
        app:showAsAction="never" />

    <item
        android:id="@+id/time_format"
        android:checkable="true"
        android:checked="true"
        android:orderInCategory="5"
        android:title="24 Hour Format" />

    <item
        android:id="@+id/share"
        android:orderInCategory="6"
        android:title="@string/share"
        app:showAsAction="never" />

    <item
        android:id="@+id/about"
        android:orderInCategory="7"
        android:title="@string/about"
        app:showAsAction="never" />

    <item
        android:id="@+id/report"
        android:orderInCategory="8"
        android:title="@string/report_issue"
        app:showAsAction="never" />

    <item
        android:id="@+id/help"
        android:orderInCategory="9"
        android:title="@string/help_amp_support"
        app:showAsAction="never" />

</menu>