<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragmenthome"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.GridLayout
        android:layout_width="match_parent"
        app:orientation="vertical"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <TextView
                android:layout_marginTop="5dp"
                android:textSize="15sp"
                android:textStyle="bold"
                android:text="@string/your_time_table"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true">

            </TextView>

        </RelativeLayout>

        <android.support.v7.widget.CardView
            android:id="@+id/card1"
            android:layout_marginTop="5dp"
            android:layout_margin="10dp"
            android:layout_height="80dp"
            android:onClick="card1"
            android:transitionName="fragmentCard1"
            app:cardBackgroundColor="@color/colorPrimary"
            android:stateListAnimator="@animator/raise"
            android:layout_marginBottom="0dp"
            android:layout_width="match_parent">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:text="@string/dayorder1"
                android:textColor="@color/cardview_light_background"
                android:layout_gravity="center"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_height="wrap_content" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card2"
            android:onClick="card2"
            android:transitionName="fragmentCard2"
            android:layout_margin="10dp"
            android:layout_height="80dp"
            android:stateListAnimator="@animator/raise"
            app:cardBackgroundColor="@color/colorPrimary"
            android:layout_marginBottom="0dp"
            android:layout_width="match_parent">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:text="@string/dayorder2"
                android:textSize="30sp"
                android:layout_gravity="center"
                android:textColor="@color/cardview_light_background"
                android:textStyle="bold"
                android:layout_height="wrap_content" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card3"
            android:onClick="card3"
            android:transitionName="fragmentCard3"
            android:layout_margin="10dp"
            android:layout_height="80dp"
            android:stateListAnimator="@animator/raise"
            app:cardBackgroundColor="@color/colorPrimary"
            android:layout_marginBottom="0dp"
            android:layout_width="match_parent">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:text="@string/dayorder3"
                android:textSize="30sp"
                android:textColor="@color/cardview_light_background"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:layout_height="wrap_content" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card4"
            android:onClick="card4"
            android:transitionName="fragmentCard4"
            android:layout_margin="10dp"
            android:layout_height="80dp"
            android:stateListAnimator="@animator/raise"
            app:cardBackgroundColor="@color/colorPrimary"
            android:layout_marginBottom="0dp"
            android:layout_width="match_parent">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:text="@string/dayorder4"
                android:layout_gravity="center"
                android:textSize="30sp"
                android:textColor="@color/cardview_light_background"
                android:textStyle="bold"
                android:layout_height="wrap_content" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card5"
            android:onClick="card5"
            android:transitionName="fragmentCard5"
            android:layout_margin="10dp"
            android:layout_height="80dp"
            android:stateListAnimator="@animator/raise"
            app:cardBackgroundColor="@color/colorPrimary"
            android:layout_marginBottom="0dp"
            android:layout_width="match_parent">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:text="@string/dayorder5"
                android:layout_gravity="center"
                android:textSize="30sp"
                android:textColor="@color/cardview_light_background"
                android:textStyle="bold"
                android:layout_height="wrap_content" />

        </android.support.v7.widget.CardView>

        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <TextView
                android:layout_marginTop="5dp"
                android:textSize="15sp"
                android:textStyle="bold"
                android:text="@string/whatsnew"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true">

            </TextView>

        </RelativeLayout>

        <android.support.v7.widget.CardView
            android:id="@+id/news_card"
            android:layout_marginTop="5dp"
            android:layout_margin="10dp"
            android:layout_height="80dp"
            android:onClick="news"
            app:cardBackgroundColor="@color/colorPrimary"
            android:stateListAnimator="@animator/raise"
            android:layout_marginBottom="0dp"
            android:layout_width="match_parent">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:text="@string/announcement"
                android:textColor="@color/cardview_light_background"
                android:layout_gravity="center"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_height="wrap_content" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/events_card"
            android:onClick="event"
            android:layout_margin="10dp"
            android:layout_height="80dp"
            android:stateListAnimator="@animator/raise"
            app:cardBackgroundColor="@color/colorPrimary"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            app:contentPaddingBottom="10dp">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:text="@string/events"
                android:textSize="30sp"
                android:layout_gravity="center"
                android:textColor="@color/cardview_light_background"
                android:textStyle="bold"
                android:layout_height="wrap_content" />

        </android.support.v7.widget.CardView>

    </android.support.v7.widget.GridLayout>

</ScrollView>
