<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragmenthome"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:text="@string/your_time_table"
                android:textStyle="normal|bold">

            </TextView>

        </RelativeLayout>

        <android.support.v7.widget.CardView
            android:id="@+id/card1"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:onClick="card1"
            android:stateListAnimator="@animator/raise"
            android:transitionName="fragmentCard1"
            app:cardBackgroundColor="@color/colorPrimary">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/dayorder1"
                android:textColor="@android:color/white"
                android:textSize="30sp" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card2"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:onClick="card2"
            android:stateListAnimator="@animator/raise"
            android:transitionName="fragmentCard2"
            app:cardBackgroundColor="@color/colorPrimary">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/dayorder2"
                android:textColor="@android:color/white"
                android:textSize="30sp" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card3"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:onClick="card3"
            android:stateListAnimator="@animator/raise"
            android:transitionName="fragmentCard3"
            app:cardBackgroundColor="@color/colorPrimary">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/dayorder3"
                android:textColor="@android:color/white"
                android:textSize="30sp" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card4"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:onClick="card4"
            android:stateListAnimator="@animator/raise"
            android:transitionName="fragmentCard4"
            app:cardBackgroundColor="@color/colorPrimary">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/dayorder4"
                android:textColor="@android:color/white"
                android:textSize="30sp" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card5"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:onClick="card5"
            android:stateListAnimator="@animator/raise"
            android:transitionName="fragmentCard5"
            app:cardBackgroundColor="@color/colorPrimary">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/dayorder5"
                android:textColor="@android:color/white"
                android:textSize="30sp" />

        </android.support.v7.widget.CardView>

    </LinearLayout>

</ScrollView>
