<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:text="@string/whatsnew"
                android:textStyle="normal|bold">

            </TextView>

        </RelativeLayout>

        <android.support.v7.widget.CardView
            android:id="@+id/news_card"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:onClick="news"
            android:stateListAnimator="@animator/raise"
            app:cardBackgroundColor="@color/colorPrimary">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/announcement"
                android:textColor="@android:color/white"
                android:textSize="30sp" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/events_card"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:onClick="event"
            android:stateListAnimator="@animator/raise"
            app:cardBackgroundColor="@color/colorPrimary"
            app:contentPaddingBottom="10dp">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/events"
                android:textColor="@android:color/white"
                android:textSize="30sp" />

        </android.support.v7.widget.CardView>

    </LinearLayout>

</ScrollView>
